--- a/index.html
+++ b/index.html
@@ -32,7 +32,25 @@
   </header>
 
   <main class="container section">
-    <h1>Title</h1>
+    <h1>Más sobre nosotros</h1>
+
+    <div class="icons-us">
+      <div class="icon">
+        <img src="./build/img/icono1.svg" alt="Icono seguridad" loading="lazy">
+        <h3>Seguridad</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempore est pariatur nam similique, eos placeat perspiciatis iste, architecto ea consequatur laudantium quo quas repudiandae earum, sapiente minus facere modi!</p>
+      </div>
+      <div class="icon">
+        <img src="./build/img/icono2.svg" alt="Icono precio" loading="lazy">
+        <h3>Seguridad</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempore est pariatur nam similique, eos placeat perspiciatis iste, architecto ea consequatur laudantium quo quas repudiandae earum, sapiente minus facere modi!</p>
+      </div>
+      <div class="icon">
+        <img src="./build/img/icono3.svg" alt="Icono tiempo" loading="lazy">
+        <h3>Seguridad</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempore est pariatur nam similique, eos placeat perspiciatis iste, architecto ea consequatur laudantium quo quas repudiandae earum, sapiente minus facere modi!</p>
+      </div>
+    </div>
   </main>
 
   <footer class="footer section">
