--- a/index.html
+++ b/index.html
@@ -32,26 +32,68 @@
   </header>
 
   <main class="container section">
-    <h1>Más sobre nosotros</h1>
+    <h2>Más sobre nosotros</h2>
 
     <div class="icons-us">
       <div class="icon">
         <img src="./build/img/icono1.svg" alt="Icono seguridad" loading="lazy">
         <h3>Seguridad</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempore est pariatur nam similique, eos placeat perspiciatis iste, architecto ea consequatur laudantium quo quas repudiandae earum, sapiente minus facere modi!</p>
+        <p>La seguridad es nuestra principal prioridad. Nos comprometemos a garantizar que cada transacción se realice de manera segura y transparente, brindando la tranquilidad que nuestros clientes merecen al invertir en propiedades.</p>
       </div>
       <div class="icon">
         <img src="./build/img/icono2.svg" alt="Icono precio" loading="lazy">
-        <h3>Seguridad</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempore est pariatur nam similique, eos placeat perspiciatis iste, architecto ea consequatur laudantium quo quas repudiandae earum, sapiente minus facere modi!</p>
+        <h3>Precio</h3>
+        <p>Ofrecemos un enfoque centrado en el valor para cada una de nuestras propiedades. Nuestro equipo se esfuerza por negociar precios justos y competitivos, asegurando que nuestros clientes obtengan la mejor oferta posible sin comprometer la calidad.</p>
       </div>
       <div class="icon">
         <img src="./build/img/icono3.svg" alt="Icono tiempo" loading="lazy">
-        <h3>Seguridad</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempore est pariatur nam similique, eos placeat perspiciatis iste, architecto ea consequatur laudantium quo quas repudiandae earum, sapiente minus facere modi!</p>
+        <h3>Tiempo</h3>
+        <p>Entendemos la importancia de cumplir con los plazos y compromisos acordados. En nuestra inmobiliaria, nos comprometemos a cumplir con los horarios establecidos, ya sea para mostrar una propiedad o completar cualquier trámite necesario.</p>
       </div>
     </div>
   </main>
+
+  <section class="section container">
+    <h2>Casas y depas en venta</h2>
+
+    <div class="container-announcements">
+      <div class="announcement">
+        <picture>
+          <source srcset="./build/img/anuncio1.webp" type="image/webp">
+          <source srcset="./build/img/anuncio1.jpg" type="image/jpeg">
+          <img loading="lazy" src="./build/img/anuncio1.jpg" alt="Anuncio 1">
+        </picture>
+
+        <div class="content-announcement">
+          <h3>Casa de lujo en el lago</h3>
+          <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio.</p>
+          <p class="price">$3.000.0000</p>
+          <ul class="icons">
+            <li>
+              <img loading="lazy" src="./build/img/icono_wc.svg" alt="Icono WC">
+              <p>3</p>
+            </li>
+            <li>
+              <img loading="lazy" src="./build/img/icono_estacionamiento.svg" alt="Icono estacionamiento">
+              <p>3</p>
+            </li>
+            <li>
+              <img loading="lazy" src="./build/img/icono_dormitorio.svg" alt="Icono habitaciones">
+              <p>3</p>
+            </li>
+          </ul>
+
+          <a href="./announcement.html" class="btn-yellow">
+            Ver propiedad
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="align-right">
+      <a href="./announcements.html" class="btn-green">Ver todas</a>
+    </div>
+  </section>
 
   <footer class="footer section">
     <div class="container content-footer">
