--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </li>
           </ul>
 
-          <a href="./announcement.html" class="btn-yellow">
+          <a href="./announcement.html" class="btn-yellow-block">
             Ver propiedad
           </a>
         </div>
@@ -93,6 +93,12 @@
     <div class="align-right">
       <a href="./announcements.html" class="btn-green">Ver todas</a>
     </div>
+  </section>
+
+  <section class="image-contact">
+    <h2>Encuentra la casa de tus sueños</h2>
+    <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
+    <a href="./contact.html" class="btn-yellow">Contáctanos</a>
   </section>
 
   <footer class="footer section">
