--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
         <div class="text-entrance">
           <a href="./entrance.html">
             <h4>Terraza en el techo de tu casa</h4>
-            <p>Escrito el: <span>20/01/2021</span> por: <span>Admin</span></p>
+            <p class="information-meta">Escrito el: <span>20/01/2021</span> por: <span>Admin</span></p>
 
             <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
             </p>
