--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="text-entrance">
           <a href="./entrance.html">
             <h4>Terraza en el techo de tu casa</h4>
-            <p>Escrito el: <span>20/01/2021</span> por: <span>Admin</span></p>
+            <p class="information-meta">Escrito el: <span>20/01/2021</span> por: <span>Admin</span></p>
 
             <p>Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero</p>
           </a>
@@ -132,7 +132,7 @@
         <div class="text-entrance">
           <a href="./entrance.html">
             <h4>Guía para la decoración de tu hogar</h4>
-            <p>Escrito el: <span>20/01/2021</span> por: <span>Admin</span></p>
+            <p class="information-meta">Escrito el: <span>20/01/2021</span> por: <span>Admin</span></p>
 
             <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio</p>
           </a>
